--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,4 +1,5 @@
 name: Rust
+run-name: Rust
 
 on:
   push:
@@ -16,7 +17,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Build
-      run: cargo build --verbose
+    - name: Run checks
+      run: cargo check --verbose
     - name: Run tests
       run: cargo test --verbose
