--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -22,11 +22,12 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build
       run: cargo build --release --verbose
-    - name: Run tests
-      run: cargo test --verbose
     - uses: actions/upload-artifact@v4
       with:
         name: binary
         path: target/release/fpkg
     - name: Rust Cache
       uses: Swatinem/rust-cache@v2.7.7
+  test:
+    - name: Run tests                                                                                                                                     │
+      run: cargo test --verbose
