--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,7 +14,7 @@ env:
   CARGO_INCREMENTAL: 0
 
 jobs:
-  build:
+  build-and-test:
 
     runs-on: ubuntu-latest
 
@@ -22,12 +22,11 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build
       run: cargo build --release --verbose
+    - name: Test
+      run: cargo test --verbose
     - uses: actions/upload-artifact@v4
       with:
-        name: binary
+        name: fpkg
         path: target/release/fpkg
     - name: Rust Cache
       uses: Swatinem/rust-cache@v2.7.7
-  test:
-    - name: Run tests                                                                                                                                     │
-      run: cargo test --verbose
