--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,6 +27,6 @@ jobs:
     - uses: actions/upload-artifact@v4
       with:
         name: fpkg
-        path: target/release/fpkg
+        path: target/x86_64-unknown-linux-musl/release/fpkg
     - name: Rust Cache
       uses: Swatinem/rust-cache@v2.7.7
