--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,6 +20,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    - name: Dependencies
+      run: rustup target add x86_64-unknown-linux-musl
     - name: Build
       run: cargo build --release --verbose
     - name: Test
