--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,21 +14,38 @@ env:
   CARGO_INCREMENTAL: 0
 
 jobs:
-  build-and-test:
+  all:
 
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Dependencies
-      run: rustup target add x86_64-unknown-linux-musl
-    - name: Build
-      run: cargo build --release --verbose
-    - name: Test
-      run: cargo test --verbose
-    - uses: actions/upload-artifact@v4
-      with:
-        name: fpkg
-        path: target/x86_64-unknown-linux-musl/release/fpkg
-    - name: Rust Cache
-      uses: Swatinem/rust-cache@v2.7.7
+      - uses: actions/checkout@v4
+      - name: Dependencies
+        run: |
+          sudo apt-get update --yes && sudo apt-get install --yes musl-tools
+          rustup target add x86_64-unknown-linux-musl
+      - name: Build
+        run: cargo build --release --verbose
+      - name: Test
+        run: cargo test --verbose
+      - uses: actions/upload-artifact@v4
+        with:
+          name: fpkg
+          path: target/x86_64-unknown-linux-musl/release/fpkg
+      - name: Rust Cache
+        uses: Swatinem/rust-cache@v2.7.7
+      - name: Generate the changelog
+        uses: orhun/git-cliff-action@v4
+        if: startsWith(github.ref, 'refs/tags/v')
+        with:
+          config: cliff.toml
+          args: --verbose
+        env:
+          OUTPUT: CHANGELOG.md
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/v')
+        with:
+          files: target/x86_64-unknown-linux-musl/release/fpkg
+          draft: true
+          body_path: CHANGELOG.md
