--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,7 +14,7 @@ env:
   CARGO_INCREMENTAL: 0
 
 jobs:
-  all:
+  build-and-test:
 
     runs-on: ubuntu-latest
 
@@ -34,6 +34,14 @@ jobs:
           path: target/x86_64-unknown-linux-musl/release/fpkg
       - name: Rust Cache
         uses: Swatinem/rust-cache@v2.7.7
+  release:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download fpkg
+        uses: actions/download-artifact@v4
+        if: startsWith(github.ref, 'refs/tags/v')
+        with:
+          name: fpkg
       - name: Generate the changelog
         uses: orhun/git-cliff-action@v4
         if: startsWith(github.ref, 'refs/tags/v')
