Flesh out parts of pkg utilities

--- a/cliff.toml
+++ b/cliff.toml
@@ -72,10 +72,11 @@ commit_parsers = [
   { message = "^chore|^ci", group = "<!-- 7 -->⚙️ Miscellaneous Tasks" },
   { body = ".*security", group = "<!-- 8 -->🛡️ Security" },
   { message = "^revert", group = "<!-- 9 -->◀️ Revert" },
-  { message = ".*", group = "<!-- 10 -->💼 Other" },
+  { message = "^infra", group = "<!-- 10 -->🚧 Infrastructure"}
+  # { message = ".*", group = "<!-- 11 -->💼 Other" },
 ]
 # filter out the commits that are not matched by commit parsers
-filter_commits = false
+filter_commits = true
 # sort the tags topologically
 topo_order = false
 # sort the commits inside sections by oldest/newest order
