--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,11 @@ edition = "2021"
 [dependencies]
 colog = "1.3.0"
 exitcode = "1.1.2"
+indicatif = "0.17.11"
 kdl = "6.3.3"
 log = "0.4.25"
+openssl = { version = "0.10.70", features = ["vendored"] }
+reqwest = { version = "0.12.12", features = ["blocking"] }
 tar = "0.4.43"
+tokio = "1.43.0"
 zstd = "0.13.2"
