--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,8 @@ reqwest = { version = "0.12.12", features = ["blocking"] }
 tar = "0.4.43"
 tokio = "1.43.0"
 zstd = "0.13.2"
+
+[profile.release]
+lto = true
+strip = true
+codegen-units = 1
