--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -25,7 +25,9 @@ jobs:
           sudo apt-get update --yes && sudo apt-get install --yes musl-tools
           rustup target add x86_64-unknown-linux-musl
       - name: Build
-        run: cargo build --release --verbose
+        run: |
+          cargo build --release --verbose
+          strip -s target/x86_64-unknown-linux-musl/release/fpkg
       - name: Test
         run: cargo test --verbose
       - uses: actions/upload-artifact@v4
