chore(deps): Remove uneeded dependencies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,9 @@ kdl = "6.3.3"
 log = "0.4.25"
 reqwest = { version = "0.12.12", features = [
     "rustls-tls",
+    "blocking",
 ], default-features = false }
 tar = "0.4.43"
-tokio = "1.43.0"
 zstd = "0.13.2"
 
 [profile.release]
