--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.95"
 colog = "1.3.0"
 exitcode = "1.1.2"
 indicatif = "0.17.11"
@@ -15,6 +16,7 @@ reqwest = { version = "0.12.12", features = [
     "blocking",
 ], default-features = false }
 tar = "0.4.43"
+users = "0.11.0"
 zstd = "0.13.2"
 
 [profile.release]
