--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ reqwest = { version = "0.12.12", features = [
 ], default-features = false }
 tar = "0.4.43"
 users = "0.11.0"
+walkdir = "2.5.0"
 zstd = "0.13.2"
 
 [profile.release]
