--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -29,7 +29,7 @@ jobs:
           cargo build --release --verbose
           strip -s target/x86_64-unknown-linux-musl/release/fpkg
       - name: Test
-        run: cargo test --verbose
+        run: cargo test --verbose --release
       - uses: actions/upload-artifact@v4
         with:
           name: fpkg
