--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ reqwest = { version = "0.12.12", features = [
     "blocking",
 ], default-features = false }
 tar = "0.4.43"
-users = "0.11.0"
+uzers = "0.12.1"
 walkdir = "2.5.0"
 zstd = "0.13.2"
 
