--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,10 @@ colog = "1.3.0"
 exitcode = "1.1.2"
 indicatif = "0.17.11"
 kdl = "6.3.3"
+libmount = "0.1.15"
 log = "0.4.25"
 pubgrub = "0.2.1"
+rand = "0.9.0"
 reqwest = { version = "0.12.12", features = [
     "rustls-tls",
     "blocking",
