--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -8,6 +8,8 @@ on:
   push:
     branches:
       - main
+    tags:
+      - "v*.*.*"
 
 env:
   CARGO_TERM_COLOR: always
@@ -39,12 +41,12 @@ jobs:
     steps:
       - name: Download fpkg
         uses: actions/download-artifact@v4
-        if: startsWith(github.ref, 'refs/tags/v')
+        if: startsWith(github.event.ref, 'refs/tags/v')
         with:
           name: fpkg
       - name: Generate the changelog
         uses: orhun/git-cliff-action@v4
-        if: startsWith(github.ref, 'refs/tags/v')
+        if: startsWith(github.event.ref, 'refs/tags/v')
         with:
           config: cliff.toml
           args: --verbose --latest
@@ -52,7 +54,7 @@ jobs:
           OUTPUT: CHANGELOG.md
       - name: Release
         uses: softprops/action-gh-release@v2
-        if: startsWith(github.ref, 'refs/tags/v')
+        if: startsWith(github.event.ref, 'refs/tags/v')
         with:
           files: target/x86_64-unknown-linux-musl/release/fpkg
           draft: true
