--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -38,7 +38,7 @@ jobs:
           path: target/x86_64-unknown-linux-musl/release/fpkg
   release:
     runs-on: ubuntu-latest
-    if: startsWith(github.event.ref, 'refs/tags/v')
+    if: ${{ startsWith(github.ref, 'refs/tags/') }}
     needs: build-and-test
     steps:
       - name: Download fpkg
