--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -41,6 +41,7 @@ jobs:
     if: ${{ startsWith(github.ref, 'refs/tags/') }}
     needs: build-and-test
     steps:
+      - uses: actions/checkout@v4
       - name: Download fpkg
         uses: actions/download-artifact@v4
         with:
@@ -56,5 +57,4 @@ jobs:
         uses: softprops/action-gh-release@v2
         with:
           files: target/x86_64-unknown-linux-musl/release/fpkg
-          draft: true
           body_path: CHANGELOG.md
