--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -42,6 +42,8 @@ jobs:
     needs: build-and-test
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: Download fpkg
         uses: actions/download-artifact@v4
         with:
