--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ indicatif = "0.17.11"
 kdl = "6.3.3"
 log = "0.4.25"
 nix = { version = "0.29.0", features = ["process"] }
+pathdiff = "0.2.3"
 pubgrub = "0.2.1"
 rand = "0.9.0"
 reqwest = { version = "0.12.12", features = [
