--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.95"
 colog = "1.3.0"
+ctrlc = "3.4.5"
 exitcode = "1.1.2"
 indicatif = "0.17.11"
 kdl = "6.3.3"
