--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -29,13 +29,13 @@ jobs:
       - name: Build
         run: |
           cargo build --release --verbose
-          strip -s target/x86_64-unknown-linux-musl/release/fpkg
+          strip -s target/x86_64-unknown-linux-musl/release/dpt
       - name: Test
         run: cargo test --verbose --release
       - uses: actions/upload-artifact@v4
         with:
-          name: fpkg
-          path: target/x86_64-unknown-linux-musl/release/fpkg
+          name: dpt
+          path: target/x86_64-unknown-linux-musl/release/dpt
   release:
     runs-on: ubuntu-latest
     if: ${{ startsWith(github.ref, 'refs/tags/') }}
@@ -44,13 +44,13 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Download fpkg
+      - name: Download dpt
         uses: actions/download-artifact@v4
         with:
-          name: fpkg
-          path: fpkg
+          name: dpt
+          path: dpt
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
-          files: fpkg/fpkg
+          files: dpt/dpt
           body_path: CHANGELOG.md
