--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,9 @@ uzers = "0.12.1"
 walkdir = "2.5.0"
 zstd = "0.13.2"
 
+[target.'cfg(target_env = "musl")'.dependencies]
+mimalloc = "0.1.43"
+
 [profile.release]
 lto = true
 strip = true
