--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = "1.0.95"
 colog = "1.3.0"
 ctrlc = "3.4.5"
 exitcode = "1.1.2"
+glob = "0.3.2"
 indicatif = "0.17.11"
 kdl = "6.3.3"
 log = "0.4.25"
