--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ exitcode = "1.1.2"
 glob = "0.3.2"
 indicatif = "0.17.11"
 log = "0.4.25"
-nix = { version = "0.30.0", features = ["mount"] }
+nix = { version = "0.30.0", features = ["fs", "mount", "sched"] }
 pathdiff = "0.2.3"
 pubgrub = "0.3.0"
 rand = "0.9.0"
